# Mental-Health-Emotional-Support-Assistant

./: Build knowledge base.py  README.md  app.py  build_books_rag.py  md5.txt  pyproject.toml
agent/: react_agent.py
agent/tools/: agent_tools.py  middleware.py
config/: chroma.yml  rag.yml
data/: emotional_support.txt
model/: factory.py
prompts/: main_prompt.txt  rag_summarize.txt  report_prompt.txt
rag/: rag_service.py  vector_store.py
utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
