[project]
name = "mental-health-emotional-support-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "datasets>=5.0.0",
    "langchain>=1.3.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-dashscope>=0.1.8",
    "langchain-openai>=1.3.0",
    "modelscope>=1.37.1",
    "protobuf<=3.20.3",
    "pypdf>=6.13.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.58.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
